agregado de archivo de estilos

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
    <h1>ejemplo 2</h1> 
    <p>Texto agregado</p>
+   <ul>
+       <li>
+           Primer item
+       </li>
+   </ul>
 </body>
 </html>
